--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
                 loading="lazy"
                 class="socicon"
         /></a>
-        <a href="linkedin.com/in/edina-p/" target="_blank"
+        <a href="https://www.linkedin.com/in/edina-p/" target="_blank"
             ><img
                 src="assets/icons/icons8-linkedin-circled.gif"
                 alt="Linkedin"
